--- a/war/Sample.css
+++ b/war/Sample.css
@@ -1,43 +1,34 @@
-input{
+.user-add-form-text-boxes-fio{
     margin: 5px;
     height: 25px;
     width: 100%;
 }
-.listCity{
+.user-add-form-radio-group-sex {
+    height: 20px !important;
+}
+
+.user-add-form-list-city{
     margin: 5px;
     height: 25px;
     width: 100%;
 }
-.dateOfBirthday{
+.user-add-form-date-of-birthday-picker{
     height: 25px;
 }
 
-.panelSex {
-
-}
-
-.gwt-Button{
+.user-add-form-button-add-user{
     margin: 10px 5px;
 }
 
-#gwt-uid-1{
-    height: 20px !important;
-}
-#gwt-uid-2{
-    height: 20px !important;
-}
 
-.gwt-Label {
+
+.user-add-form-error-labels {
     color: #e53010;
     margin: 7px 10px;
     height: 25px;
 }
 
-.usersTable {
+.users-table-general {
     margin: 20px 0;
 }
 
-.gwt-ListBox {
-    margin: 10px 10px 10px 5px;
-    width: 100%;
-}
