--- a/war/Sample.css
+++ b/war/Sample.css
@@ -1,4 +1,4 @@
-button{
+button {
     margin: 20px;
     padding: 5px 7px;
     text-decoration: none;
@@ -10,12 +10,21 @@ button{
     float: right;
 }
 
-.user-form-radio-group-sex{
-    margin: 10px;
-
+.user-form-full-name-panel {
+    width: 100%;
 }
 
-.user-form-text-boxes-fio{
+.user-form-radio-group-sex {
+    margin: 10px;
+}
+
+.user-form-radio-group-sex-error {
+    border-style: solid;
+    border-color: red;
+    margin: 10px;
+}
+
+.user-form-text-boxes-fio {
     border-style: solid;
     border-color: lightseagreen;
     margin: 5px 0;
@@ -23,7 +32,15 @@ button{
     width: 100%;
 }
 
-.user-form-list-city{
+.user-form-text-boxes-fio-error {
+    border-style: solid;
+    border-color: red;
+    margin: 5px 0;
+    height: 25px;
+    width: 100%;
+}
+
+.user-form-list-city {
     border-color: lightseagreen;
     border-width: 3px;
     margin: 5px 0;
@@ -31,7 +48,15 @@ button{
     width: 100%;
 }
 
-.user-form-date-of-birthday-picker{
+.user-form-list-city-error {
+    border-color: red;
+    border-width: 3px;
+    margin: 5px 0;
+    height: 25px;
+    width: 100%;
+}
+
+.user-form-date-of-birthday-picker {
     margin: 5px 0;
 }
 
